--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hotjar/browser": "^1.0.9",
     "@sendgrid/mail": "^7.7.0",
     "@types/node": "18.15.1",
     "@types/react": "18.0.28",
