--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,10 @@
 version: '3.8'
 services:
-  web:
-    build:
-      context: ./
-      target: runner
-    volumes:
-      - .:/app
-    command: npm run dev
-    ports:
-      - "3000:3000"
-    environment:
-      NODE_ENV: development
+    web:
+        build:
+            context: .
+        command: npm start
+        ports:
+            - '3000:3000'
+        environment:
+            NODE_ENV: development
