--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
             context: .
         command: npm start
         ports:
-            - '3000:3000'
+            - '${PORT}:${PORT}'
         environment:
             NODE_ENV: development
+            PORT: ${PORT}
