--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "plaiceholder": "^3.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-share-kit": "^1.1.0",
     "sharp": "^0.32.1",
     "typescript": "4.9.5"
   },
