--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "embla-carousel-react": "^8.5.2",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "framer-motion": "^12.0.1",
     "next": "13.2.4",
     "plaiceholder": "^3.0.0",
     "react": "18.2.0",
